@@ -1,8 +1,6 @@
 imagesdir = $(imagedir)
 images_DATA =	       \
-	background.png \
-	window.png
+	background.png
 
 EXTRA_DIST =	       \
-	background.png \
-	window.png
+	background.png
