@@ -1,5 +1,7 @@
 2006-04-17  David Reveman  <davidr@novell.com>
 
+	* images/Makefile.am: Remove window.png.
+
 	* include/compiz.h:
 	* src/readpng.c: Add openImageFile.
 
